fix: correct spacing review section

--- a/style.css
+++ b/style.css
@@ -652,6 +652,7 @@ hr {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1rem;
 }
 
 .user-review {
@@ -790,3 +791,50 @@ hr {
     opacity: 0.7;
   }
 }
+/* Blogs section */
+.blogs {
+  padding: 3rem 0;
+  text-align: left;
+}
+.blogs-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 3rem;
+}
+.first-blog {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.blog-card {
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+}
+.card-header {
+  font-size: 2rem;
+  line-height: 1.6rem;
+  font-weight: 600;
+}
+.read-more {
+  color: var(--black);
+  font-weight: 600;
+  font-size: 1.3rem;
+}
+.blogs-wrapper p {
+  font-size: 1.2rem;
+  line-height: 1.2rem;
+}
+.blog-date {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 30px;
+  color: #f29764;
+}
+/* }
+.blogs-wrapper p {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 30px;
+} */
